config/deployment.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: podcastuniversity-deployment
  labels:
    app: podcast-university-app
spec:
  selector:
    matchLabels:
      app: podcast-university-app
      tier: web
  template:
    metadata:
      labels:
        app: podcast-university-app
        tier: web
    spec:
      nodeSelector:
        cloud.google.com/gke-accelerator: "nvidia-tesla-t4"
      containers:
      - name: podcast-university-app
        image: us-east1-docker.pkg.dev/podcast-university/podcast-university-repo/podcast-university-app:v1.4gpu
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "while true; do sleep 600; done;" ]
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 4
            memory: 15Gi
            nvidia.com/gpu: 1
            ephemeral-storage: 10Gi
          limits:
            cpu: 4
            memory: 15Gi
            nvidia.com/gpu: 1
            ephemeral-storage: 10Gi
