config/ingress.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podcast-university-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: podcast-university-httpsip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
#    cloud.google.com/backend-config: '{"ports": {"8080":"podcast-university-backend-config"}}'
  labels:
    app: podcast-university-app
spec:
  defaultBackend:
    service:
      name: podcast-university-backend
      port:
        number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: podcast-university-backend
  labels:
    app: podcast-university-app
  annotations:
      cloud.google.com/backend-config: '{"default": "podcast-university-backend-config"}'
spec:
  type: NodePort
  selector:
    app: podcast-university-app
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
